image_classification/pytorch/output/npu/forward-densenet201-bs_128
  File "bench.py", line 49
    if args.platform == "gpu":
    ^
IndentationError: unexpected indent
